--- a/HTML.and.CSS/index.html
+++ b/HTML.and.CSS/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="background">
         <div class="all__code">
-            <div class="mainScreen">
+            <!-- <div class="mainScreen">
                 <div class="h">
                     <div class="patnashki">
                         пятнашки
@@ -37,6 +37,37 @@
                         правила
                     </div>
                 </div>
+            </div> -->
+
+            <div class="gameScreen">
+                <div class="gameTop">
+                    <div>Голова 1</div>
+                    <div>Голова 2</div>
+                    <div>Голова 3</div>
+                </div>
+
+                <div class="gameBoard">
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>10</div>
+                    <div>11</div>
+                    <div>12</div>
+                    <div>13</div>
+                    <div>14</div>
+                    <div>15</div>
+                    <div>16</div>
+                </div>
+                <div class="gameFoot">
+                    <div>Назад в меню</div>
+                </div>
+
             </div>
 
         </div>
