--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <title>Document</title>
 </head>
 
@@ -39,7 +40,7 @@
                 </div>
             </div> -->
 
-            <div class="gameScreen">
+            <!-- <div class="gameScreen">
                 <div class="gameTop">
                     <div>Голова 1</div>
                     <div>Голова 2</div>
@@ -68,10 +69,20 @@
                     <div>Назад в меню</div>
                 </div>
 
-            </div>
+            </div> -->
 
+            <!-- <div class="pravila">
+                <div class="textPrav">A leader is selected, who receives a colored bandage and becomes in the center of
+                    the site. After the signal: "Catch!" - all the children scatter around the playground, and the
+                    driver tries to catch up with one of the players and tarnish. The one who was stained by the driver
+                    steps aside. After 2-3 repetitions, Fifteen changes.
+                </div>
+                <div class="btn back"><i class="fa fa-facebook"></i>Back</div>
+            </div> -->
+            <!-- 
+<div class="statatisticScr">
+
+</div> -->
         </div>
     </div>
 </body>
-
-</html>
