--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
             </div> -->
 
-            <!-- <div class="pravila">
+            <div class="pravila">
                 <div class="textPrav">A leader is selected, who receives a colored bandage and becomes in the center of
                     the site. After the signal: "Catch!" - all the children scatter around the playground, and the
                     driver tries to catch up with one of the players and tarnish. The one who was stained by the driver
                     steps aside. After 2-3 repetitions, Fifteen changes.
                 </div>
                 <div class="btn back"><i class="fa fa-facebook"></i>Back</div>
-            </div> -->
+            </div>
             <!-- 
 <div class="statatisticScr">
 
