Добавил страницу статистики, доработал игров поле

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Tags</title>
 </head>
 
 <body>
@@ -40,11 +40,14 @@
                 </div>
             </div> -->
 
-            <!-- <div class="gameScreen">
+            <div class="gameScreen">
                 <div class="gameTop">
-                    <div>Голова 1</div>
-                    <div>Голова 2</div>
-                    <div>Голова 3</div>
+                    <div class="gameTopOne"> Новая игра </div>
+                    <div class="gameTopTwo">
+                        <div>Количество ходов:</div>
+                        <div>0</div>
+                    </div>
+
                 </div>
 
                 <div class="gameBoard">
@@ -63,26 +66,40 @@
                     <div>13</div>
                     <div>14</div>
                     <div>15</div>
-                    <div>16</div>
+                    <div></div>
                 </div>
                 <div class="gameFoot">
-                    <div>Назад в меню</div>
+                    <div>Меню</div>
                 </div>
 
-            </div> -->
+            </div>
 
-            <div class="pravila">
+            <!-- <div class="pravila">
                 <div class="textPrav">A leader is selected, who receives a colored bandage and becomes in the center of
                     the site. After the signal: "Catch!" - all the children scatter around the playground, and the
                     driver tries to catch up with one of the players and tarnish. The one who was stained by the driver
                     steps aside. After 2-3 repetitions, Fifteen changes.
                 </div>
                 <div class="btn back"><i class="fa fa-facebook"></i>Back</div>
-            </div>
-            <!-- 
-<div class="statatisticScr">
+            </div> -->
 
-</div> -->
+            <!-- <div class="statScr">
+                
+                <div class="statTop">Статистика</div>
+
+                <div class="statBoard">
+                    <div>Количество игр</div>
+                    <div>0</div>
+                    <div>Выиграно игр</div>
+                    <div>0</div>
+                    <div>Проиграно игр</div>
+                    <div>0</div>
+                </div>
+
+                <div class="statFoot">Меню</div>
+
+            </div> -->
+
         </div>
     </div>
 </body>
