--- a/index.html
+++ b/index.html
@@ -15,32 +15,50 @@
         <div class="all__code">
             <!-- <div class="mainScreen">
                 <div class="h">
-                    <div class="patnashki">
-                        пятнашки
-                    </div>
+                    <button class="patnashki btn1">
+                        <div class="bigBtn">
+                            пятнашки
+                        </div>
+                    </button>
                 </div>
 
                 <div class="top">
-                    <div class="statistic btn">
-                        статистика
-                    </div>
+                    <button class="statistic btn2">
+                        <div class="bigBtn">
+                            статистика
+                        </div>
+                    </button>
 
-                    <div class="play btn">
-                        ИГРАТЬ
-                    </div>
+                    <button class="play btn3">
+                        <div class="bigBtn">
+                            ИГРАТЬ
+                        </div>
+                    </button>
 
-                    <div class="aboutUs btn">
-                        про создателей
-                    </div>
+                    <button class="aboutUs btn4">
+                        <div class="bigBtn">
+                            создатели
+                        </div>
+                    </button>
                 </div>
                 <div class="top">
-                    <div class="rules btn">
-                        правила
-                    </div>
+                    <button class="rules btn5">
+                        <div class="bigBtn">
+                            правила
+                        </div>
+                    </button>
                 </div>
             </div> -->
+<!-- 
+            <div class="autors">
+                <div class="urlAutors">
+                    <a href="https://scalan.com/author/qubedron/">Qubedron</a>
+                    <a href="https://scalan.com/author/qubedron/">Qubedron</a>
+                </div>
+                <div class="btn back"><i class="fa fa-facebook"></i>Back</div>
+            </div> -->
 
-            <div class="gameScreen">
+            <!-- <div class="gameScreen">
                 <div class="gameTop">
                     <div class="gameTopOne"> Новая игра </div>
                     <div class="gameTopTwo">
@@ -72,7 +90,7 @@
                     <div>Меню</div>
                 </div>
 
-            </div>
+            </div> -->
 
             <!-- <div class="pravila">
                 <div class="textPrav">A leader is selected, who receives a colored bandage and becomes in the center of
