--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
                 </div>
 
                 <div class="gameBoard">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
-                    <div>7</div>
-                    <div>8</div>
-                    <div>9</div>
-                    <div>10</div>
-                    <div>11</div>
-                    <div>12</div>
-                    <div>13</div>
-                    <div>14</div>
-                    <div>15</div>
-                    <div></div>
+                    <div @click="usersClick(0,0)">{{desk[0][0]}}</div>
+                    <div @click="usersClick(0,1)">{{desk[0][1]}}</div>
+                    <div @click="usersClick(0,2)">{{desk[0][2]}}</div>
+                    <div @click="usersClick(0,3)">{{desk[0][3]}}</div>
+                    <div @click="usersClick(1,0)">{{desk[1][0]}}</div>
+                    <div @click="usersClick(1,1)">{{desk[1][1]}}</div>
+                    <div @click="usersClick(1,2)">{{desk[1][2]}}</div>
+                    <div @click="usersClick(1,3)">{{desk[1][3]}}</div>
+                    <div @click="usersClick(2,0)">{{desk[2][0]}}</div>
+                    <div @click="usersClick(2,1)">{{desk[2][1]}}</div>
+                    <div @click="usersClick(2,2)">{{desk[2][2]}}</div>
+                    <div @click="usersClick(2,3)">{{desk[2][3]}}</div>
+                    <div @click="usersClick(3,0)">{{desk[3][0]}}</div>
+                    <div @click="usersClick(3,1)">{{desk[3][1]}}</div>
+                    <div @click="usersClick(3,2)">{{desk[3][2]}}</div>
+                    <div @click="usersClick(3,3)">{{desk[3][3]}}</div>
                 </div>
                 <div class="gameFoot">
                     <div @click="goToMainScreen">Меню</div>
@@ -115,7 +115,7 @@
 
                 <div class="statFoot" @click="goToMainScreen">Меню</div>
 
-            </div> 
+            </div>
 
         </div>
     </div>
@@ -126,53 +126,104 @@
     let app = new Vue({
         el: '.background',
         data: {
-            mainScreen:true,
+            mainScreen: true,
             playScreen: false,
             rulesScreen: false,
             statisticScreen: false,
             autorsScreen: false,
-
+            desk: [
+                ['1', '2', '3', '4'],
+                ['5', '6', '7', '8'],
+                ['9', '10', '11', '12'],
+                ['13', '14', '15', ' ']
+            ],
         },
-        methods:{
-            goToMainScreen () {
-            this.mainScreen = true;
-            this.playScreen = false;
-            this.rulesScreen = false;
-            this.statisticScreen = false;
-            this.autorsScreen = false;
+        methods: {
+            goToMainScreen() {
+                this.mainScreen = true;
+                this.playScreen = false;
+                this.rulesScreen = false;
+                this.statisticScreen = false;
+                this.autorsScreen = false;
             },
 
-            goToPlayScreen () {
-            this.mainScreen = false;
-            this.playScreen = true;
-            this.rulesScreen = false;
-            this.statisticScreen = false;
-            this.autorsScreen = false;
+            goToPlayScreen() {
+                this.mainScreen = false;
+                this.playScreen = true;
+                this.rulesScreen = false;
+                this.statisticScreen = false;
+                this.autorsScreen = false;
+                // Перемешать фишки
+                this.desk = [
+                    ['1', '2', '3', '4'],
+                    ['5', '6', '7', '8'],
+                    ['9', '10', '11', '12'],
+                    ['13', '14', '15', ' ']
+                ];
+                let x = 3;
+                let y = 3;
+                for (let i = 0; i < 1000; i++) {
+                    let r = Math.floor(Math.random() * 4);
+                    console.log(r);
+                    if (r == 0) { // Up
+                        if (y > 0) {
+                            this.desk[y][x] = this.desk[y - 1][x];
+                            this.desk[y - 1][x] = " ";
+                            y--;
+                        }
+                    }
+                    if (r == 3) {  // Left
+                        if (x > 0) {
+                            this.desk[y][x] = this.desk[y][x - 1];
+                            this.desk[y][x - 1] = " ";
+                            x--;
+                        }
+                    }
+                    if (r == 1) { // Right
+                        if (x < 3) {
+                            this.desk[y][x] = this.desk[y][x + 1];
+                            this.desk[y][x + 1] = " ";
+                            x++;
+                        }
+                    }
+                    if (r == 2) { // Down
+                        if (y < 3) {
+                            this.desk[y][x] = this.desk[y + 1][x];
+                            this.desk[y + 1][x] = " ";
+                            y++;
+                        }
+                    }
+                }
+                this.$forceUpdate();
             },
 
-            goToRulesScreen () {
-            this.mainScreen = false;
-            this.playScreen = false;
-            this.rulesScreen = true;
-            this.statisticScreen = false;
-            this.autorsScreen = false;
+            goToRulesScreen() {
+                this.mainScreen = false;
+                this.playScreen = false;
+                this.rulesScreen = true;
+                this.statisticScreen = false;
+                this.autorsScreen = false;
             },
 
-            goToStatisticScreen () {
-            this.mainScreen = false;
-            this.playScreen = false;
-            this.rulesScreen = false;
-            this.statisticScreen = true;
-            this.autorsScreen = false;
+            goToStatisticScreen() {
+                this.mainScreen = false;
+                this.playScreen = false;
+                this.rulesScreen = false;
+                this.statisticScreen = true;
+                this.autorsScreen = false;
             },
 
-            goToAutorsScreen () {
-            this.mainScreen = false;
-            this.playScreen = false;
-            this.rulesScreen = false;
-            this.statisticScreen = false;
-            this.autorsScreen = true;
+            goToAutorsScreen() {
+                this.mainScreen = false;
+                this.playScreen = false;
+                this.rulesScreen = false;
+                this.statisticScreen = false;
+                this.autorsScreen = true;
             },
+            usersClick(row, column) {
+                console.log(row + "," + column);
+            }
+
 
 
         }
