--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="./fonts/Ultra/Ultra-Regular.ttf">
     <title>Tags</title>
+    <link rel="shortcut icon" href="./IMG/icon.webp" type="image/x-icon">
 </head>
 
 <body>
