--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="all__code">
             <div class="mainScreen" v-show="mainScreen">
                 <div class="h">
-                    <button class="patnashki btn1">
+                    <button class="patnashki btn1 battons">
                         <div class="bigBtn">
 
                             Tags
@@ -72,22 +72,22 @@
                 </div>
 
                 <div class="gameBoard">
-                    <div @click="usersClick(0,0)">{{desk[0][0]}}</div>
-                    <div @click="usersClick(0,1)">{{desk[0][1]}}</div>
-                    <div @click="usersClick(0,2)">{{desk[0][2]}}</div>
-                    <div @click="usersClick(0,3)">{{desk[0][3]}}</div>
-                    <div @click="usersClick(1,0)">{{desk[1][0]}}</div>
-                    <div @click="usersClick(1,1)">{{desk[1][1]}}</div>
-                    <div @click="usersClick(1,2)">{{desk[1][2]}}</div>
-                    <div @click="usersClick(1,3)">{{desk[1][3]}}</div>
-                    <div @click="usersClick(2,0)">{{desk[2][0]}}</div>
-                    <div @click="usersClick(2,1)">{{desk[2][1]}}</div>
-                    <div @click="usersClick(2,2)">{{desk[2][2]}}</div>
-                    <div @click="usersClick(2,3)">{{desk[2][3]}}</div>
-                    <div @click="usersClick(3,0)">{{desk[3][0]}}</div>
-                    <div @click="usersClick(3,1)">{{desk[3][1]}}</div>
-                    <div @click="usersClick(3,2)">{{desk[3][2]}}</div>
-                    <div @click="usersClick(3,3)">{{desk[3][3]}}</div>
+                    <div class="number" @click="usersClick(0,0)">{{desk[0][0]}}</div>
+                    <div class="number" @click="usersClick(0,1)">{{desk[0][1]}}</div>
+                    <div class="number" @click="usersClick(0,2)">{{desk[0][2]}}</div>
+                    <div class="number" @click="usersClick(0,3)">{{desk[0][3]}}</div>
+                    <div class="number" @click="usersClick(1,0)">{{desk[1][0]}}</div>
+                    <div class="number" @click="usersClick(1,1)">{{desk[1][1]}}</div>
+                    <div class="number" @click="usersClick(1,2)">{{desk[1][2]}}</div>
+                    <div class="number" @click="usersClick(1,3)">{{desk[1][3]}}</div>
+                    <div class="number" @click="usersClick(2,0)">{{desk[2][0]}}</div>
+                    <div class="number" @click="usersClick(2,1)">{{desk[2][1]}}</div>
+                    <div class="number" @click="usersClick(2,2)">{{desk[2][2]}}</div>
+                    <div class="number" @click="usersClick(2,3)">{{desk[2][3]}}</div>
+                    <div class="number" @click="usersClick(3,0)">{{desk[3][0]}}</div>
+                    <div class="number" @click="usersClick(3,1)">{{desk[3][1]}}</div>
+                    <div class="number" @click="usersClick(3,2)">{{desk[3][2]}}</div>
+                    <div class="number" @click="usersClick(3,3)">{{desk[3][3]}}</div>
                 </div>
                 <div class="gameFoot" @click="goToMainScreen">
                     <div>Menu</div>
@@ -107,7 +107,7 @@
 
             <div class="statScr" v-show="statisticScreen">
 
-                <div class="statTop">Statistics</div>
+                <div class="statTop btn">Statistics</div>
 
                 <div class="statBoard">
                     <div>Number of games</div>
