--- a/index.html
+++ b/index.html
@@ -70,24 +70,25 @@
                     </div>
 
                 </div>
-
-                <div class="gameBoard">
-                    <div class="number" @click="usersClick(0,0)">{{desk[0][0]}}</div>
-                    <div class="number" @click="usersClick(0,1)">{{desk[0][1]}}</div>
-                    <div class="number" @click="usersClick(0,2)">{{desk[0][2]}}</div>
-                    <div class="number" @click="usersClick(0,3)">{{desk[0][3]}}</div>
-                    <div class="number" @click="usersClick(1,0)">{{desk[1][0]}}</div>
-                    <div class="number" @click="usersClick(1,1)">{{desk[1][1]}}</div>
-                    <div class="number" @click="usersClick(1,2)">{{desk[1][2]}}</div>
-                    <div class="number" @click="usersClick(1,3)">{{desk[1][3]}}</div>
-                    <div class="number" @click="usersClick(2,0)">{{desk[2][0]}}</div>
-                    <div class="number" @click="usersClick(2,1)">{{desk[2][1]}}</div>
-                    <div class="number" @click="usersClick(2,2)">{{desk[2][2]}}</div>
-                    <div class="number" @click="usersClick(2,3)">{{desk[2][3]}}</div>
-                    <div class="number" @click="usersClick(3,0)">{{desk[3][0]}}</div>
-                    <div class="number" @click="usersClick(3,1)">{{desk[3][1]}}</div>
-                    <div class="number" @click="usersClick(3,2)">{{desk[3][2]}}</div>
-                    <div class="number" @click="usersClick(3,3)">{{desk[3][3]}}</div>
+                <div class="gcentr">
+                    <div class="gameBoard">
+                        <div class="number" @click="usersClick(0,0)">{{desk[0][0]}}</div>
+                        <div class="number" @click="usersClick(0,1)">{{desk[0][1]}}</div>
+                        <div class="number" @click="usersClick(0,2)">{{desk[0][2]}}</div>
+                        <div class="number" @click="usersClick(0,3)">{{desk[0][3]}}</div>
+                        <div class="number" @click="usersClick(1,0)">{{desk[1][0]}}</div>
+                        <div class="number" @click="usersClick(1,1)">{{desk[1][1]}}</div>
+                        <div class="number" @click="usersClick(1,2)">{{desk[1][2]}}</div>
+                        <div class="number" @click="usersClick(1,3)">{{desk[1][3]}}</div>
+                        <div class="number" @click="usersClick(2,0)">{{desk[2][0]}}</div>
+                        <div class="number" @click="usersClick(2,1)">{{desk[2][1]}}</div>
+                        <div class="number" @click="usersClick(2,2)">{{desk[2][2]}}</div>
+                        <div class="number" @click="usersClick(2,3)">{{desk[2][3]}}</div>
+                        <div class="number" @click="usersClick(3,0)">{{desk[3][0]}}</div>
+                        <div class="number" @click="usersClick(3,1)">{{desk[3][1]}}</div>
+                        <div class="number" @click="usersClick(3,2)">{{desk[3][2]}}</div>
+                        <div class="number" @click="usersClick(3,3)">{{desk[3][3]}}</div>
+                    </div>
                 </div>
                 <div class="gameFoot" @click="goToMainScreen">
                     <div>Menu</div>
@@ -108,10 +109,10 @@
                 <div class="statTop btn">Statistics</div>
 
                 <div class="statBoard">
-                    <div>Number of games</div>
-                    <div>0</div>
-                    <div>Games won</div>
-                    <div>{{movesCount}}</div>
+                    <div class="fontsize">Number of games</div>
+                    <div class="fontsize">0</div>
+                    <div class="fontsize">Games won</div>
+                    <div class="fontsize">{{movesCount}}</div>
                 </div>
 
                 <div class="gameFoot" @click="goToMainScreen">Menu</div>
@@ -168,7 +169,7 @@
                 let x = 3;
                 let y = 3;
 
-                for (let i = 0; i < 2; i++) {
+                for (let i = 0; i < 1000; i++) {
                     let r = Math.floor(Math.random() * 4);
                     if (r == 0) { // Up
                         if (y > 0) {
