--- a/index.html
+++ b/index.html
@@ -122,12 +122,7 @@
             statisticScreen: false,
             autorsScreen: false,
             gameF: true,
-            desk: [
-                ['1', '2', '3', '4'],
-                ['5', '6', '7', '8'],
-                ['9', '10', '11', '12'],
-                ['13', '14', '15', ' ']
-            ],
+            desk: [],
             movesCount: 0,
         },
         methods: {
